--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongodb": "^3.6.4",
-    "mongoose": "^5.3.12"
+    "mongoose": "^5.3.12",
+    "compression": "^1.7.4"
   }
 }
