--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "dependencies": {
     "assert": "^2.0.0",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "8.2.0",
     "express": "^4.16.4",
     "mongodb": "^3.6.4",
     "mongoose": "^5.3.12",
-    "compression": "^1.7.4",
-    "dotenv": "8.2.0"
+    "mongoose-sequence": "^5.3.1"
   }
 }
