--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.3.12",
     "mongoose-sequence": "^5.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
